--- a/_posts/2019-12-26-the-us-narrative-today.html
+++ b/_posts/2019-12-26-the-us-narrative-today.html
@@ -1751,107 +1751,107 @@ stories:
   domain: http://www.othellooutlook.com/
   link: http://othellooutlook.com/real-estate-investment-professionals-turn-online-clubs/
 images:
-- name: fast-lights-freeway-redes-fast-flux-623x425-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-satan-red.jpg
-- name: old-school-house-old-schoolhouse-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-atari-missle.jpg
-- name: flower-barbed-wire-flower-barbed-wire-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-deep-connections.jpg
-- name: downtown-fredericksburg-crafty-painting.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-crafty-painting.JPG
-- name: server-cloud-server-racks-door-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-cinnamon-rolls.jpg
-- name: oldroad-old-road-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-light-dali.jpg
-- name: blossombar-crafty-painting-file-00-00-50-25.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-25.jpg
-- name: status-berlin-status-berlin-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dark-soul.jpg
-- name: nazi-invasion-downtown-berlin-crowds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-downtown-berlin-crowds.jpg
-- name: fence-fence-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-really-hot.jpg
-- name: downtheline-downtheline-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-rainbow-festival.jpg
-- name: berlinwall2-berlinwall-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-bright-sand.jpg
-- name: server-cloud-server-racks-clouds-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-ww2-color.jpg
-- name: old-church-oldchurch-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-alberto-giacometti.jpg
-- name: lincoln-memorial-lincolnmemorial-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-colorful-blocks.jpg
-- name: razorcliff-razorcliff-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-purple-pond.jpg
-- name: oldcabin-store-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-internet-numbers.jpg
-- name: walled-garden-walled-garden-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-far-away.jpg
-- name: razorwire-DSC-0080-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-crafty-painting.jpg
-- name: curtain-curtain-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dark-rain.jpg
-- name: trucksilo-trucksilo-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-umberto-bocc.jpg
-- name: birdhouse-birdhouse-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-creativity.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-copper-circuit-2.jpg
-- name: blossombar-purp-paper-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purp-paper-file-00-00-24-99.jpg
-- name: downtown-los-angeles-downtown-la-diego-rivera1.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-diego-rivera1.JPG
-- name: sand-hand-sand-hand-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-oily-mcoilface.jpg
-- name: stalin-time-border-crossing-through-fence.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-border-crossing-through-fence.jpg
-- name: mistywoods-babyfoot-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-kandinsky-bv.jpg
-- name: store-on-corner-oldcabin-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-colorful-dream.jpg
-- name: braceros-domingo-ulloa-oxford-old-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-oxford-old-building.jpg
-- name: sand-hand-sand-hand-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-free-woman.jpg
-- name: oldroad-old-road-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-marcel-duchamp.jpg
-- name: christianity-christianity-under-construction-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-deep-connections.jpg
-- name: power-lines-power-lines-empty-space-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-internet-numbers.jpg
-- name: copper-circuit-seatlle-shipping-mountain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-seatlle-shipping-mountain.jpg
-- name: status-berlin-status-berlin-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-oily-mcoilface.jpg
-- name: server-cloud-server-racks-door-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-granite.jpg
-- name: adam-smith-adam-smith-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-marcel-duchamp.jpg
-- name: copper-circuit-firetruck-bright-sun.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-firetruck-bright-sun.jpg
-- name: mosaic-face-mosaic-face-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dali-two.jpg
-- name: stories-beach-rocks-currents-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-beach-rocks-currents-feed-people.jpg
-- name: mistywoods-babyfoot-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-bright-sand.jpg
-- name: meadowbutterfly-meadow-butterfly-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-satan-red.jpg
-- name: treeinhills-yellowtree-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/treeinhills-yellowtree-still.jpg
-- name: subway-subway-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-atari-missle.jpg
-- name: window-window-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dali-three.jpg
-- name: amusement-park-amusement-park-2-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-circuit.jpg
-- name: aws-s3-stories-new-path-in-the-woods-black-white.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-path-in-the-woods-black-white.jpg
-- name: white-house-lawn-white-house-lawn-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-monet-one.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dark-dali.jpg
-- name: la-muse-eiphel-tower-paris-brown.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-eiphel-tower-paris-brown.jpg
+- name: oldhouse-oldhouse-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-pablo-blue.jpg
+- name: dc-statue-dcstatue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue.jpg
+- name: subway-subway-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-alien-goggles.jpg
+- name: gypsymosaic-gypsy-eyes-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-hot-spicy.jpg
+- name: ellis-island-ellis-island-room-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-smoking-cigarette.jpg
+- name: stories-36349140070-d5ec39cb34-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-36349140070-d5ec39cb34-z.jpg
+- name: oldsmallboat-oldsmallboat-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-atari-asteroids.jpg
+- name: supreme-court-supremecourt-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-creativity.jpg
+- name: white-house-lawn-white-house-lawn-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-crabapple.jpg
+- name: abandonedbuildings_far_away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_far_away.jpg
+- name: containership-containership-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-post-modern.jpg
+- name: oldsmallboat-oldsmallboat-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-crunch-paper.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-soul.jpg
+- name: downtown-los-angeles-downtown-la-smooth-ride.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-smooth-ride.JPG
+- name: fast-lights-freeway-redes-fast-flux-623x425-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-space-pizza.jpg
+- name: mosaic-face-mosaic-face-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-mucha-mult.jpg
+- name: catacombs-catacombs-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-dry-skin.jpg
+- name: crow-crow-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-blue-granite.jpg
+- name: stories-white-man-burning-down.jpg-large
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-white-man-burning-down.jpg-large
+- name: powerlines-power-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-colorful-blocks.jpg
+- name: old-barn-old-barn-1500-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-umberto-bocc.jpg
+- name: hollywood-building-hollywood-building-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-oily-mcoilface.jpg
+- name: status-berlin-status-berlin-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-clean-view.jpg
+- name: razorwire-DSC-0080-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-crabapple.jpg
+- name: dc-statue-dcstatue-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-alien-goggles.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-yellow-collage.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-yellow-collage.png
+- name: mosaic-face-mosaic-face-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dark-rain.jpg
+- name: bf-skinner-going-to-dowtown-los-angeles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-going-to-dowtown-los-angeles.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-smooth-ride.jpg
+- name: oldroad-old-road-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-satan-red.jpg
+- name: mosaic-face-mosaic-face-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-deep-connections.jpg
+- name: machine-road-machine-road-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-electricity.jpg
+- name: gypsy-wagon-gypsywagon-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-nazi-poster.jpg
+- name: aws-s3-methuselah-methuselah-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-methuselah-methuselah-still-600.jpg
+- name: ellis-island-ellisisland-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-plentiful.jpg
+- name: bluelake-dry-skin-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dry-skin-file-00-01-17-38.jpg
+- name: razorcliff-razorcliff-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-deep-connections.jpg
+- name: rain-princess-IMG_2971.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_2971.jpg
+- name: old-granary-field-granaryfield-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-ww2-color.jpg
+- name: oldroad-old-road-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-sunday.jpg
+- name: docks-docks-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-dark-soul.jpg
+- name: oldroad-old-road-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-matrix.jpg
+- name: window-window-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-colorful-blocks.jpg
+- name: fence-mexico-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-dali-three.jpg
+- name: miamibeach-miamibeach-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-satan-red.jpg
+- name: razorwire-DSC-0080-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-rainbow-festival.jpg
+- name: christianity-christianity-under-construction-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-smooth-ride.jpg
+- name: old-barn-old-barn-1500-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-purple-storm.jpg
+- name: copper-circuit-girl-reading-garden-flowers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-girl-reading-garden-flowers.jpg
+- name: legal-statue-legalstatue-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-purple-storm.jpg
+- name: oldtrain-oldtrain-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-dry-skin.jpg
 ---
 Fallin Home Shown In Country Living Magazine.&nbsp;Boost Social Security Checks By Tapping IRAs Early, Suggests Study.&nbsp;Conference To Address Connection Between Big Data And Food Safety.&nbsp;Watch Delivery Driver Repeatedly Run Over Package.&nbsp;Geometry Global And MediaINFO Digital Library.&nbsp;Yolanda Adams Just Added To Global Phenomenon, Peace Starts With Me Rally.&nbsp;Siegmeister Was Driven To Quit By Divorce, Lawyer Says.&nbsp;The Boastfuls Set To Premier First Single Tequila At Stage West Show Friday.&nbsp;
